--- a/src/SerilogWeb.Classic/SerilogWeb.Classic.csproj
+++ b/src/SerilogWeb.Classic/SerilogWeb.Classic.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classic\ApplicationLifecycleModule.cs" />
+    <Compile Include="Classic\DictionarySerilogWebExtensions.cs" />
     <Compile Include="Classic\Enrichers\ClaimValueEnricher.cs" />
     <Compile Include="Classic\Enrichers\HttpContextCurrent.cs" />
     <Compile Include="Classic\Enrichers\HttpRequestClientHostIPEnricher.cs" />
@@ -69,6 +70,8 @@
     <Compile Include="Classic\Enrichers\HttpSessionIdEnricher.cs" />
     <Compile Include="Classic\Enrichers\UserNameEnricher.cs" />
     <Compile Include="Classic\LogPostedFormDataOption.cs" />
+    <Compile Include="Classic\HttpContextExtensions.cs" />
+    <Compile Include="Classic\SerilogWebErrorInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\..\assets\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
